--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
     <title>titulo del post</title>
 </head>
 <body>
-    <h1>Aquí haremos un blog del post</h1>
-    <p>Este es el primer párrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aquí haremos un blog del post</h1>
+            <p>Este es el primer párrafo con el que vamos a comenzar a subir nuestra rama</p>
+        </div>
+    </div>
 </body>
 </html>
