--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">Cabecera</div>
         <div id="post">
             <h1>Aquí haremos un blog del post</h1>
             <p>Este es el primer párrafo con el que vamos a comenzar a subir nuestra rama</p>
