--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Aquí haremos un blog del post</h1>
             <p>Este es el primer párrafo con el que vamos a comenzar a subir nuestra rama</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis possimus nesciunt tenetur earum nisi sapiente unde perspiciatis numquam veniam. Non autem veritatis quia aut deleniti quasi tenetur fugiat vel porro.</p>
         </div>
     </div>
 </body>
