Agregué suscripción, cambie a azul y cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,12 +10,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Aquí haremos un blog del post</h1>
             <p>Este es el primer párrafo con el que vamos a comenzar a subir nuestra rama</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis possimus nesciunt tenetur earum nisi sapiente unde perspiciatis numquam veniam. Non autem veritatis quia aut deleniti quasi tenetur fugiat vel porro.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
